# ssfw

./: readme.md  ssfw.code-workspace
boards/TroneSystems/trn-ss-01/: Kconfig.trn-ss-01  board.yml  trn-ss-01.dts  trn-ss-01.yml
boards/TroneSystems/trn_ss01/: Kconfig.trn_ss01  board.yml  trn_ss01.dts  trn_ss01.yml
dev/coap_client/: CMakeLists.txt  prj.conf
dev/coap_client/inc/: ble_utils.h  coap_client_utils.h  dns_utils.h  net_utils.h
dev/coap_client/src/: ble_utils.c  coap_client.c  coap_client_utils.c  dns_utils.c  net_utils.c
dev/ss_mqtt/: CMakeLists.txt
dev/ss_mqtt/src/: udp.c
dev/sstest/: CMakeLists.txt  prj.conf
dev/sstest/inc/: adc.h  ble_nus.h  board.h  iim42652.h  sensors.h  stts2004.h
dev/sstest/src/: adc.c  ble_nus.c  board.c  iim42652.c  main.c  sensors.c  sensors.h  stts2004.c
tools/: ble_plot.py  ble_scan.py  ble_terminal.py  requirements.txt  weather.py
